fixed spacing menu issue in the header

--- a/static/css/webcom-base.css
+++ b/static/css/webcom-base.css
@@ -93,7 +93,7 @@ table tr td{border-top-style: solid; border-top-width: 1px;}
  * Header
  **/
 div#tt-header-links {padding-top: 30px; text-align: right;}
-#tt-header-links a{font-size: 14px; margin-left: 25px;}
+#tt-header-links a{font-size: 14px; margin-left: 6px;}
 #tt-header-links a:hover{text-decoration: underline;}
 
 #home{margin-top: 20px}
